# three-stars

./: .gitignore  .mcp.json  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: run-fast-tests.sh
.claude/skills/investigate/: SKILL.md
.claude/skills/kickoff/: SKILL.md
.claude/skills/propose/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/sprint/: SKILL.md
.claude/skills/test-dx/: SKILL.md
.claude/skills/test-manager/: SKILL.md
.github/workflows/: publish.yml
.kiro/agents/: developer.json  investigator.json  reviewer.json
.sandbox/: README.md
spec/: design.md  implementation_qa.md  requirements.md  tasks.md
spec/proposals/: 20260221_apply_dx_review_p0_p1_fixes.md  20260221_dx_review_aws_developer_experience.md  20260221_dx_review_module_redesign.md  20260221_e2e_developer_experience_evaluation.md  20260221_e2e_oac_fix_evaluation.md  20260221_fix_agentcore_deployment.md  20260221_implement_aws_cli_tool.md  20260221_lambda_url_auth_countermeasures.md  20260221_redesign_module_structure.md  20260221_security_code_review.md  20260221_security_proposal_code_review.md  20260222_dx_refinement_from_e2e_test.md  20260222_dx_test_survey_findings.md  20260222_e2e_developer_experience_evaluation.md  20260223_agentcore_memory_conversation_history.md  20260223_test_manager_skill_and_hooks.md
src/three_stars/: __init__.py  cli.py  config.py  deploy.py  destroy.py  init.py  state.py  status.py
src/three_stars/aws/: __init__.py  agentcore.py  cloudfront.py  lambda_bridge.py  s3.py  session.py
templates/starter/: pyproject.toml  three-stars.yml
templates/starter/agent/: agent.py  mcp.json  requirements.txt  tools.py
templates/starter/app/: index.html
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_deploy.py  test_destroy.py  test_mcp.py  test_state.py
tests/aws/: test_agentcore.py  test_cloudfront.py  test_lambda_bridge.py  test_s3.py
tests/integration/: conftest.py  test_agent.py  test_agentcore.py  test_tools.py
tests/resources/: test_agentcore.py  test_api_bridge.py  test_cdn.py  test_edge.py  test_storage.py
three_stars/: cli.py  config.py  deploy.py  destroy.py  init.py  mcp_server.py  naming.py  state.py  status.py
three_stars/aws/: agentcore.py  cf_function.py  lambda_bridge.py
three_stars/resources/: __init__.py  _base.py  agentcore.py  api_bridge.py  cdn.py  edge.py  storage.py
three_stars_templates/starter/: three-stars.yml
three_stars_templates/starter/agent/: memory.py
three_stars_templates/starter/app/: index.html
