[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "three-stars"
version = "0.1.0"
description = "Deploy AI-powered web applications to AWS with a single command"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "icoxfog417" },
]
keywords = ["aws", "bedrock", "agentcore", "cloudfront", "cli", "ai", "deployment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "boto3>=1.35",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "moto[cloudfront,iam,lambda,s3,sts]>=5.0",
    "pytest>=8.0",
    "ruff>=0.9",
]

[project.scripts]
sss = "three_stars.cli:main"

[project.urls]
Homepage = "https://github.com/icoxfog417/three-stars"
Repository = "https://github.com/icoxfog417/three-stars"
Issues = "https://github.com/icoxfog417/three-stars/issues"

[tool.hatch.build.targets.wheel]
packages = ["three_stars"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = [".", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
